objects/Field_Tracker_Mapping__mdt.object
<CustomObject>
    <description>Field Tracker Configuration.  Each metadata record corresponds to an Object/Field that will be tracked.  Map the fields on the Time Log object to the fields you would like to track on the parent object.</description>
    <fields>
        <fullName>Parent_Record_Field__c</fullName>
        <description>API Name of the field on the parent record.</description>
        <inlineHelpText>Specify the field you want to track (E.g. Status)</inlineHelpText>
        <label>Parent Record Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Object__c</fullName>
        <description>Parent record object type</description>
        <inlineHelpText>Specify the Object Type you want to track (E.g. Case)</inlineHelpText>
        <label>Parent Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Log_Field_Mapping__c</fullName>
        <description>Field on Time Log object that parent record&apos;s value will be written</description>
        <inlineHelpText>Field on Time Log object that parent record&apos;s value will be written (E.g. Status__c)</inlineHelpText>
        <label>Time Log Field Mapping</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Log_Field_New_Value__c</fullName>
        <description>Field on Time Log object that parent record&apos;s updated value will be written</description>
        <inlineHelpText>Field on Time Log object that parent record&apos;s updated value will be written (E.g. Status_New__c)</inlineHelpText>
        <label>Time Log Field New Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Field Tracker Mapping</label>
    <pluralLabel>Field Tracker Mappings</pluralLabel>
</CustomObject>